# Memory-Forensics-Library

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  makefile  test_diff
api/include/: memory_forencis.h
src/: diff.h  internal.h  snapshot.h
src/core/: diff.c  snapshot.c
src/os/linux/: process_maps.c  process_maps.h
src/os/windows/: backend.c  backend.h  process_memory.c  process_memory.h
tests/: test_diff.c  test_snapshot.c
